fix form layout issues

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -340,7 +340,7 @@ nav
   textarea
     width: 100%
     display: block
-    height: 65px
+    height: 50px
     border: white solid 1px
     background-color: rgba(255, 255, 255, 0.42)
   button
